src-tauri/errors.txt
    Checking winoptimizerrevamp v0.1.0 (F:\WinOpt\WinOptimizerRevamp\src-tauri)
error[E0599]: no function or associated item named `new` found for struct `ProcessRefreshKind` in the current scope
    --> src\process.rs:28:29
     |
  28 |         ProcessRefreshKind::new().with_cpu(),
     |                             ^^^ function or associated item not found in `ProcessRefreshKind`
     |
note: if you're trying to build a new `ProcessRefreshKind` consider using one of the following associated functions:
      ProcessRefreshKind::nothing
      ProcessRefreshKind::everything
    --> C:\Users\User\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\sysinfo-0.33.1\src\common\system.rs:1859:5
     |
1859 |     pub fn nothing() -> Self {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^
...
1874 |     pub fn everything() -> Self {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: there is a method `ne` with a similar name, but with different arguments
    --> /rustc/01f6ddf7588f42ae2d7eb0a2f21d44e8e96674cf\library\core\src\cmp.rs:264:5

For more information about this error, try `rustc --explain E0599`.
error: could not compile `winoptimizerrevamp` (lib) due to 1 previous error
